--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "pinia": "^2.0.23",
     "vue": "^3.2.41",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.5",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.1.2",
