--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "pinia": "^2.0.23",
     "vue": "^3.2.41",
     "vue-router": "^4.1.5",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "wavesurfer.js": "^6.4.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.1.2",
